--- a/content/sections/projects/projects.json
+++ b/content/sections/projects/projects.json
@@ -2,40 +2,67 @@
   "projects": [
     {
       "visible": true,
-      "category": "🕹️ EASY AND QUICK SETUP",
-      "title": "Add content and deploy!",
-      "description": "Get up and running within minutes. Just install the starter, add your content, deploy it, and there you go! This starter works seamlessly with hosts like Netlify. Photo by Clément H on Unsplash.",
+      "category": "React JS ",
+      "title": "Star Wars API",
+    "description": "An application developed using React hooks and asynchronous JavaScript that gets data back from a REST API and displays Star Wars characters in a table .",
       "tags": ["Content Integration", "Ready-2-Deploy"],
       "image": {
-        "src": "../../images/clement-h-95YRwf6CNw8-unsplash.jpg",
+        "src": "../../images/starwars.populate.PNG",
         "alt": "Quick Setup",
-        "linkTo": "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal-theme"
+        "linkTo": "https://github.com/Charles-CarM/Star-Wars-API"
       },
       "links": [
         {
           "type": "github",
-          "url": "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal-theme"
+          "url": "https://github.com/Charles-CarM/Star-Wars-API"
         },
         {
           "type": "external",
-          "url": "https://www.gatsbyjs.org/docs/mdx/writing-pages/"
+          "url": ""
         }
       ]
     },
     {
       "visible": true,
-      "category": "🧰 EXTENDABLE LAYOUT",
-      "title": "Add more sections!",
-      "description": "The starter includes predefined sections as well as a template for new, custom sections. Moreover, you can add new projects to this section without additional coding. Photo by Kelly Sikkema on Unsplash.",
+      "category": "Vanilla JS",
+      "title": "Amazing Calculator",
+      "description": "A calculator that performs simple and continuous arithmetic problems written fully in vanilla JavaScript, HTML, and CSS.",
       "tags": ["Custom Sections", "Easy-2-Use"],
       "image": {
-        "src": "../../images/kelly-sikkema-Hl3LUdyKRic-unsplash.jpg",
-        "alt": "Extendable Layout"
+        "src": "../../images/calculator.JPG",
+        "alt": "Extendable Layout",
+        "linkTo": "https://github.com/Charles-CarM/Calculator"
       },
       "links": [
         {
           "type": "github",
-          "url": "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal-theme"
+          "url": "https://github.com/Charles-CarM/Calculator"
+        },
+        {
+          "type": "external",
+          "url": ""
+        }
+      ]
+    },
+    {
+      "visible": true,
+      "category": "React JS",
+      "title": "Expense Tracker",
+    "description": "An awesome Expense Tracker developed using the React library, Vanilla JavaScript, and CSS.",
+      "tags": ["Content Integration", "Ready-2-Deploy"],
+      "image": {
+        "src": "../../images/expense.JPG",
+        "alt": "Quick Setup",
+        "linkTo": "https://theincrediblejourney.herokuapp.com/"
+      },
+      "links": [
+        {
+          "type": "github",
+          "url": "https://github.com/Charles-CarM/Expense-Tracker-React-"
+        },
+        {
+          "type": "external",
+          "url": "https://theincrediblejourney.herokuapp.com/"
         }
       ]
     }
