--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "minimal",
     "animations",
     "dark-mode",
-    "gdpr-compliant"
+    "gdpr-compliant",
+    "software developer",
+    "software engineer",
+    "full stack developer"
   ]
 }
