--- a/content/sections/projects/projects.json
+++ b/content/sections/projects/projects.json
@@ -68,8 +68,8 @@
     }
   ],
   "button": {
-    "visible": true,
-    "label": "Visit on Github",
-    "url": "https://github.com/konstantinmuenster/gatsby-theme-portfolio-minimal"
+    "visible": false,
+    "label": "",
+    "url": ""
   }
 }
