--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "url": "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal-theme/issues"
   },
   "keywords": [
-    "react",
     "gatsby",
+    "SEO",
+    "React",
+    "JavaScript",
+    "C#",
     "gatsby-theme",
     "PWA",
     "portfolio",
