--- a/content/settings.json
+++ b/content/settings.json
@@ -13,7 +13,7 @@
       "github": "https://github.com/Charles-CarM",
       "medium": "",
       "linkedin": "https://www.linkedin.com/in/charlescarmichaellutz/",
-      "mail": "mailto:bigFish14@mail.com"
+      "mail": "mailto:charlie_lutz21@yahoo.com"
     }
   },
   "siteConfiguration": {
